tests/compile-fail/data_race/write_write_race.stderr
warning: thread support is experimental and incomplete: weak memory effects are not emulated.

error: Undefined Behavior: Data race detected between Write on Thread(id = 2) and Write on Thread(id = 1) at alloc954 (current vector clock = VClock([15, 0, 6]), conflicting timestamp = VClock([0, 6]))
  --> $DIR/write_write_race.rs:21:13
   |
21 |             *c.0 = 64; //~ ERROR Data race detected between Write on Thread(id = 2) and Write on Thread(id = 1)
   |             ^^^^^^^^^ Data race detected between Write on Thread(id = 2) and Write on Thread(id = 1) at alloc954 (current vector clock = VClock([15, 0, 6]), conflicting timestamp = VClock([0, 6]))
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside closure at $DIR/write_write_race.rs:21:13

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error; 1 warning emitted

